--- a/index.html
+++ b/index.html
@@ -493,30 +493,30 @@ int prediction(char gameBoard[6][7], int length, int safeMoves[], int safeCount)
 					</p>	
 					<p>	
 						<div class="buttonGroup">
-							<button class="picLaunch" style="background:url('vixenSprite.png')">
+							<button class="picLaunch" style="background:url('VixenSprite.png')">
 							</button>
 							<div class="pModal">
 								<div class="modalPhoto">
 									<p>
-										<img src="vixenSprite.png" style="width:100%;">
+										<img src="VixenSprite.png" style="width:100%;">
 									</p>	
 								</div>
 							</div>
-							<button class="picLaunch" style="background:url('vixen.png')">
+							<button class="picLaunch" style="background:url('Vixen.png')">
 							</button>
 								<div class="pModal">
 									<div class="modalPhoto">
 										<p>
-											<img src="vixen.png" style="width:100%;">
+											<img src="Vixen.png" style="width:100%;">
 										</p>	
 									</div>
 								</div>
-							<button class="picLaunch" style="background:url('vixenTest.png')">
+							<button class="picLaunch" style="background:url('VixenTest.png')">
 							</button>
 							<div class="pModal">
 								<div class="modalPhoto">
 									<p>
-										<img src="vixenTest.png" style="width:100%;">
+										<img src="VixenTest.png" style="width:100%;">
 									</p>	
 								</div>
 							</div>
