--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<div class="dModal">
 				<div class="modalDocument">
 					<p>
-						<embed src="resume.pdf" width="800px" height="751.19px"/>
+						<embed src="Resume.pdf" width="800px" height="751.19px"/>
 					</p>
 				</div>
 			</div>
