--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
 							<div class="pModal">
 								<div class="modalPhoto">
 									<p>
-										<img src="foxKeeperMainScreen.png" style="width:100%;">
+										<img src="foxKeeperMainScreen.png" style="width:100%;"><br>
+										<strong>Main menu<strong>
 									</p>	
 								</div>
 							</div>
@@ -122,7 +123,8 @@
 						 --><div class="pModal">
 								<div class="modalPhoto">
 									<p>
-										<img src="foxKeeperSetUp.png" style="width:100%;">
+										<img src="foxKeeperSetUp.png" style="width:100%;"><br>
+										<strong>Set up menu<strong>
 									</p>	
 								</div>
 							</div><br>
@@ -498,7 +500,8 @@ int prediction(char gameBoard[6][7], int length, int safeMoves[], int safeCount)
 							<div class="pModal">
 								<div class="modalPhoto">
 									<p>
-										<img src="VixenSprite.png" style="width:100%;">
+										<img src="VixenSprite.png" style="width:100%;"><br>
+										<strong>Sprite sheet for Vixen<strong>
 									</p>	
 								</div>
 							</div>
@@ -507,7 +510,8 @@ int prediction(char gameBoard[6][7], int length, int safeMoves[], int safeCount)
 								<div class="pModal">
 									<div class="modalPhoto">
 										<p>
-											<img src="Vixen.png" style="width:100%;">
+											<img src="Vixen.png" style="width:100%;"><br>
+										<strong>Vixen, once re-assembled<strong>
 										</p>	
 									</div>
 								</div>
@@ -516,7 +520,8 @@ int prediction(char gameBoard[6][7], int length, int safeMoves[], int safeCount)
 							<div class="pModal">
 								<div class="modalPhoto">
 									<p>
-										<img src="VixenTest.png" style="width:100%;">
+										<img src="VixenTest.png" style="width:100%;"><br>
+										<strong>Testing gameplay with Vixen as character<strong>
 									</p>	
 								</div>
 							</div>
