--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 								<div class="modalPhoto">
 									<p>
 										<img src="foxKeeperMainScreen.png" style="width:100%;"><br>
-										<strong>Main menu<strong>
+										<strong>Main menu</strong>
 									</p>	
 								</div>
 							</div>
@@ -124,7 +124,7 @@
 								<div class="modalPhoto">
 									<p>
 										<img src="foxKeeperSetUp.png" style="width:100%;"><br>
-										<strong>Set up menu<strong>
+										<strong>Set up menu</strong>
 									</p>	
 								</div>
 							</div><br>
@@ -501,7 +501,7 @@ int prediction(char gameBoard[6][7], int length, int safeMoves[], int safeCount)
 								<div class="modalPhoto">
 									<p>
 										<img src="VixenSprite.png" style="width:100%;"><br>
-										<strong>Sprite sheet for Vixen<strong>
+										<strong>Sprite sheet for Vixen</strong>
 									</p>	
 								</div>
 							</div>
@@ -511,7 +511,7 @@ int prediction(char gameBoard[6][7], int length, int safeMoves[], int safeCount)
 									<div class="modalPhoto">
 										<p>
 											<img src="Vixen.png" style="width:100%;"><br>
-										<strong>Vixen, once re-assembled<strong>
+										<strong>Vixen, once re-assembled</strong>
 										</p>	
 									</div>
 								</div>
@@ -521,7 +521,7 @@ int prediction(char gameBoard[6][7], int length, int safeMoves[], int safeCount)
 								<div class="modalPhoto">
 									<p>
 										<img src="VixenTest.png" style="width:100%;"><br>
-										<strong>Testing gameplay with Vixen as character<strong>
+										<strong>Testing gameplay with Vixen as character</strong>
 									</p>	
 								</div>
 							</div>
